localhost -> host.docker.internal

--- a/conf.yaml
+++ b/conf.yaml
@@ -94,7 +94,7 @@ character_config:
 
       # Stateless LLM with Template (For Non-ChatML LLMs, usually not needed)
       stateless_llm_with_template:
-        base_url: 'http://localhost:8080/v1'
+        base_url: 'http://host.docker.internal:8080/v1'
         llm_api_key: 'somethingelse'
         organization_id: null
         project_id: null
@@ -105,7 +105,7 @@ character_config:
 
       # OpenAI Compatible inference backend
       openai_compatible_llm:
-        base_url: 'http://localhost:11434/v1'
+        base_url: 'http://host.docker.internal:11434/v1'
         llm_api_key: 'somethingelse'
         organization_id: null
         project_id: null
@@ -127,7 +127,7 @@ character_config:
         verbose: False
 
       ollama_llm:
-        base_url: 'http://localhost:11434/v1'
+        base_url: 'http://host.docker.internal:11434/v1'
         model: 'qwen2.5:latest'
         temperature: 1.0 # value between 0 to 2
         # seconds to keep the model in memory after inactivity. 
@@ -173,7 +173,7 @@ character_config:
   # === Automatic Speech Recognition ===
   asr_config:
     # speech to text model options: 'faster_whisper', 'whisper_cpp', 'whisper', 'azure_asr', 'fun_asr', 'groq_whisper_asr', 'sherpa_onnx_asr'
-    asr_model: 'sherpa_onnx_asr'
+    asr_model: 'groq_whisper_asr'
 
     azure_asr:
       api_key: 'azure_api_key'
@@ -305,7 +305,7 @@ character_config:
 
     cosyvoice_tts: # Cosy Voice TTS connects to the gradio webui
       # Check their documentation for deployment and the meaning of the following configurations
-      client_url: 'http://127.0.0.1:50000/' # CosyVoice gradio demo webui url
+      client_url: 'http://host.docker.internal:50000/' # CosyVoice gradio demo webui url
       mode_checkbox_group: '预训练音色'
       sft_dropdown: '中文女'
       prompt_text: ''
@@ -317,7 +317,7 @@ character_config:
 
     cosyvoice2_tts: # Cosy Voice TTS connects to the gradio webui
       # Check their documentation for deployment and the meaning of the following configurations
-      client_url: 'http://127.0.0.1:50000/' # CosyVoice gradio demo webui url
+      client_url: 'http://host.docker.internal:50000/' # CosyVoice gradio demo webui url
       mode_checkbox_group: '3s极速复刻' 
       sft_dropdown: '' 
       prompt_text: '' 
@@ -336,13 +336,13 @@ character_config:
       speed: 1.0
 
     x_tts:
-      api_url: 'http://127.0.0.1:8020/tts_to_audio'
+      api_url: 'http://host.docker.internal:8020/tts_to_audio'
       speaker_wav: 'female'
       language: 'en'
 
     gpt_sovits_tts:
       # put ref audio to root path of GPT-Sovits, or set the path here
-      api_url: 'http://127.0.0.1:9880/tts'
+      api_url: 'http://host.docker.internal:9880/tts'
       text_lang: 'zh'
       ref_audio_path: ''
       prompt_lang: 'zh'
@@ -404,7 +404,7 @@ character_config:
       debug: false # Enable debug mode (True/False)
     
     spark_tts:
-      api_url: 'http://127.0.0.1:6006/' # API URL. Uses Gradio's built-in front-end API. Repository: https://github.com/SparkAudio/Spark-TTS
+      api_url: 'http://host.docker.internal:6006/' # API URL. Uses Gradio's built-in front-end API. Repository: https://github.com/SparkAudio/Spark-TTS
       api_name:  "voice_clone" # Endpoint name. Options: voice_clone, voice_creation
       prompt_wav_upload: "https://uploadstatic.mihoyo.com/ys-obc/2022/11/02/16576950/4d9feb71760c5e8eb5f6c700df12fa0c_6824265537002152805.mp3" # Reference audio URL. Provide if api_name equals "voice_clone"
       gender:  "female" # Voice type (gender). Provide if api_name equals "voice_creation"
