--- a/conf.yaml
+++ b/conf.yaml
@@ -70,7 +70,7 @@ character_config:
         mcp_enabled_servers: ["time", "ddg-search"] # Enabled MCP servers
 
       letta_agent:
-        host: 'localhost' # Host address
+        host: 'host.docker.internal' # Host address
         port: 8283 # Port number
         id: xxx # ID number of the Agent running on the Letta server
         faster_first_response: True
@@ -136,7 +136,7 @@ character_config:
         unload_at_exit: True # unload the model from memory at exit
 
       lmstudio_llm:
-        base_url: 'http://localhost:1234/v1'
+        base_url: 'http://host.docker.internal:1234/v1'
         model: 'qwen2.5:latest'
         temperature: 1.0 # value between 0 to 2
 
@@ -416,7 +416,7 @@ character_config:
       model: 'kokoro' # Model name expected by the server (e.g., 'tts-1', 'kokoro')
       voice: 'af_sky+af_bella' # Voice name(s) expected by the server (e.g., 'alloy', 'af_sky+af_bella')
       api_key: 'not-needed' # API key if required by the server
-      base_url: 'http://localhost:8880/v1' # Base URL of the TTS server
+      base_url: 'http://host.docker.internal:8880/v1' # Base URL of the TTS server
       file_extension: 'mp3' # Audio file format ('mp3' or 'wav')
 
     # For more details, see: https://platform.minimaxi.com/document/Announcement
@@ -479,7 +479,7 @@ character_config:
 
       deeplx:
         deeplx_target_lang: 'JA'
-        deeplx_api_endpoint: 'http://localhost:1188/v2/translate'
+        deeplx_api_endpoint: 'http://host.docker.internal:1188/v2/translate'
       
       #  Tencent Text Translation  5 million characters per month  Remember to turn off post-payment, need to manually go to Machine Translation Console > System Settings to disable
       #   https://cloud.tencent.com/document/product/551/35017
