--- a/config_templates/conf.ZH.default.yaml
+++ b/config_templates/conf.ZH.default.yaml
@@ -7,7 +7,7 @@
 # 系统设置：与服务器初始化相关的设置
 system_config:
   conf_version: 'v1.2.1' # 配置文件版本
-  host: '0.0.0.0' # 服务器监听的地址，'0.0.0.0' 表示监听所有网络接口；如果需要安全，可以使用 '127.0.0.1'（仅本地访问）
+  host: '0.0.0.0'   # 服务器监听的地址，'0.0.0.0' 表示监听所有网络接口；如果需要安全，可以使用 '127.0.0.1'（仅本地访问）
   port: 12393 # 服务器监听的端口
   config_alts_dir: 'characters' # 用于存放替代配置的目录
   tool_prompts: # 要插入到角色提示词中的工具提示词
@@ -61,12 +61,12 @@ character_config:
         # 'mistral_llm', 'lmstudio_llm' 之类的
         llm_provider: 'ollama_llm' # 使用的 LLM 提供商
         # 是否在第一句回应时遇上逗号就直接生成音频以减少首句延迟（默认：True）
-        faster_first_response: True
+        faster_first_response: true
         # 句子分割方法：'regex' 或 'pysbd'
         segment_method: 'pysbd'
         # 是否使用 MCP（Model Context Protocol） Plus 以使 LLM 获得使用工具的能力（默认：False）
         # 'Plus' 意味着它包含了通过 OpenAI API 调用工具的能力。
-        use_mcpp: False
+        use_mcpp: false
         mcp_enabled_servers: ["time", "ddg-search"] # 启用的 MCP 服务器
 
       hume_ai_agent:
@@ -79,10 +79,10 @@ character_config:
       ##
 
       letta_agent:
-        host: 'localhost' #主机地址
+        host: 'host.docker.internal' #主机地址
         port: 8283 # 端口号
         id: xxx #letta server运行的Agent的id编号
-        faster_first_response: True
+        faster_first_response: true
         # 句子分割方法：'regex' 或 'pysbd'
         segment_method: 'pysbd'
         # 一旦选择letta作为agent，那么实际运行时候的llm是在letta上配置的，因此用户需要自己运行letta server
@@ -93,10 +93,10 @@ character_config:
 
       # 无状态 LLM 模板 (对于非 ChatML 的 LLM, 通常而言不用管这个配置)
       stateless_llm_with_template:
-        base_url: 'http://localhost:8080/v1'
+        base_url: 'http://host.docker.internal:8080/v1'
         llm_api_key: 'somethingelse'
-        organization_id: null
-        project_id: null
+        organization_id:
+        project_id:
         model: 'qwen2.5:latest'
         template: 'CHATML'
         temperature: 1.0 # value between 0 to 2
@@ -104,10 +104,10 @@ character_config:
 
       # OpenAI 兼容推理后端
       openai_compatible_llm:
-        base_url: 'http://localhost:11434/v1' # 基础 URL
+        base_url: 'http://host.docker.internal:11434/v1' # 基础 URL
         llm_api_key: 'somethingelse' # API 密钥
-        organization_id: null # 组织 ID
-        project_id: null # 项目 ID
+        organization_id:      # 组织 ID
+        project_id:      # 项目 ID
         model: 'qwen2.5:latest' # 使用的模型
         temperature: 1.0 # 温度，介于 0 到 2 之间
         interrupt_method: 'user'
@@ -123,19 +123,19 @@ character_config:
 
       llama_cpp_llm:
         model_path: '<path-to-gguf-model-file>' # GGUF 模型文件路径
-        verbose: False # 是否输出详细信息
+        verbose: false # 是否输出详细信息
 
       ollama_llm:
-        base_url: 'http://localhost:11434/v1' # 基础 URL
+        base_url: 'http://host.docker.internal:11434/v1' # 基础 URL
         model: 'qwen2.5:latest' # 使用的模型
         temperature: 1.0 # 温度，介于 0 到 2 之间
         # 不活动后模型在内存中保留的时间（秒）
         # 设置为 -1 表示模型将永远保留在内存中（即使退出 open llm vtuber 之后也是）
         keep_alive: -1
-        unload_at_exit: True # 退出时从内存中卸载模型
+        unload_at_exit: true # 退出时从内存中卸载模型
 
       lmstudio_llm:
-        base_url: 'http://localhost:1234/v1'
+        base_url: 'http://host.docker.internal:1234/v1'
         model: 'qwen2.5:latest'
         temperature: 1.0 # value between 0 to 2
 
@@ -192,8 +192,8 @@ character_config:
       # 所有可用模型都列在 https://abdeladim-s.github.io/pywhispercpp/#pywhispercpp.constants.AVAILABLE_MODELS
       model_name: 'small' # 模型名称
       model_dir: 'models/whisper' # 模型目录
-      print_realtime: False # 是否实时打印
-      print_progress: False # 是否打印进度
+      print_realtime: false # 是否实时打印
+      print_progress: false # 是否打印进度
       language: 'auto' # 语言，en、zh、auto
       prompt: '' # 提示词，用于辅助生成正确的文本
 
@@ -210,10 +210,10 @@ character_config:
       vad_model: 'fsmn-vad' # 仅当音频长度超过 30 秒时才需要使用
       punc_model: 'ct-punc' # 标点符号模型
       device: 'cpu' # 设备
-      disable_update: True # 是否每次启动时都检查 FunASR 更新
+      disable_update: true # 是否每次启动时都检查 FunASR 更新
       ncpu: 4 # CPU 内部操作的线程数
       hub: 'ms' # ms（默认）从 ModelScope 下载模型。使用 hf 从 Hugging Face 下载模型。
-      use_itn: False # 是否使用数字格式转换
+      use_itn: false # 是否使用数字格式转换
       language: 'auto' # zh, en, auto
 
     # pip install sherpa-onnx
@@ -255,7 +255,7 @@ character_config:
       # debug: False # 启用调试模式
       # sample_rate: 16000 # 采样率（应与模型预期的采样率匹配）
       # feature_dim: 80       # 特征维度（应与模型预期的特征维度匹配）
-      use_itn: True # 对 SenseVoice 模型启用 ITN（如果不是 SenseVoice 模型，则应设置为 False）
+      use_itn: true # 对 SenseVoice 模型启用 ITN（如果不是 SenseVoice 模型，则应设置为 False）
       # 推理平台（cpu 或 cuda）(cuda 需要额外配置，请参考文档)
       provider: 'cpu'
 
@@ -277,7 +277,8 @@ character_config:
       api_url: "https://api.siliconflow.cn/v1/audio/speech"
       api_key: "your key"  # 用于身份验证的API密钥
       default_model: "FunAudioLLM/CosyVoice2-0.5B"  # 默认使用的文本转语音模型
-      default_voice: "speech:Dreamflowers:5bdstvc39i:xkqldnpasqmoqbakubom your voice name"  # 默认语音配置，格式为："speech:模型名称:音色ID:您的语音名称"
+      default_voice: "speech:Dreamflowers:5bdstvc39i:xkqldnpasqmoqbakubom your voice
+        name"                                                                               # 默认语音配置，格式为："speech:模型名称:音色ID:您的语音名称"
       sample_rate: 32000  # 音频采样率（单位：Hz），不同格式支持的采样率不同：opus支持48000Hz；wav/pcm支持8000、16000、24000、32000、44100Hz（默认44100Hz）；mp3支持32000、44100Hz（默认44100Hz）
       response_format: "mp3"  # 输出音频格式，支持mp3、opus、wav、pcm
       stream: true
@@ -313,7 +314,7 @@ character_config:
 
     cosyvoice_tts: # Cosy Voice TTS 连接到 gradio webui
       # 查看他们的文档以了解部署和以下配置的含义
-      client_url: 'http://127.0.0.1:50000/' # CosyVoice gradio 演示 webui url
+      client_url: 'http://host.docker.internal:50000/' # CosyVoice gradio 演示 webui url
       mode_checkbox_group: '预训练音色' # 模式复选框组
       sft_dropdown: '中文女' # 微调下拉列表
       prompt_text: '' # 提示文本
@@ -325,14 +326,14 @@ character_config:
 
     cosyvoice2_tts: # Cosy Voice TTS 连接到 gradio webui
       # 查看他们的文档以了解部署和以下配置的含义
-      client_url: 'http://127.0.0.1:50000/' # CosyVoice gradio 演示 webui url
+      client_url: 'http://host.docker.internal:50000/' # CosyVoice gradio 演示 webui url
       mode_checkbox_group: '预训练音色' # 模式复选框组, 可选项: '预训练音色', '3s极速复刻', '跨语种复刻', '自然语言控制'
       sft_dropdown: '中文女' # 微调下拉列表
       prompt_text: '' # 提示文本
       prompt_wav_upload_url: 'https://github.com/gradio-app/gradio/raw/main/test/test_files/audio_sample.wav' # 提示 wav 上传 url
       prompt_wav_record_url: 'https://github.com/gradio-app/gradio/raw/main/test/test_files/audio_sample.wav' # 提示 wav 录制 url
       instruct_text: '' # 指令文本
-      stream: False # 流式生成
+      stream: false # 流式生成
       seed: 0 # 种子
       speed: 1.0 # 语速
       api_name: '/generate_audio' # API 名称
@@ -344,13 +345,13 @@ character_config:
       speed: 1.0 # 语速
 
     x_tts:
-      api_url: 'http://127.0.0.1:8020/tts_to_audio' # API URL
+      api_url: 'http://host.docker.internal:8020/tts_to_audio' # API URL
       speaker_wav: 'female' # 说话人 WAV 文件
       language: 'en' # 语言
 
     gpt_sovits_tts:
       # 将参考音频放到 GPT-Sovits 的根路径，或在此处设置路径
-      api_url: 'http://127.0.0.1:9880/tts' # API URL
+      api_url: 'http://host.docker.internal:9880/tts' # API URL
       text_lang: 'zh' # 文本语言
       ref_audio_path: '' # str.(必需) 参考音频的路径
       prompt_lang: 'zh' # str.(必需) 参考音频提示文本的语言
@@ -400,19 +401,19 @@ character_config:
       speed: 1.0 # 语速（1.0 为正常）
       debug: false # 启用调试模式（True/False）
     spark_tts:
-      api_url: 'http://127.0.0.1:6006/' # 初始API地址，使用gradio自带的前端API。地址：https://github.com/SparkAudio/Spark-TTS
-      api_name:  "voice_clone" # 端点名字，可选：voice_clone,voice_creation
+      api_url: 'http://host.docker.internal:6006/' # 初始API地址，使用gradio自带的前端API。地址：https://github.com/SparkAudio/Spark-TTS
+      api_name: "voice_clone"  # 端点名字，可选：voice_clone,voice_creation
       prompt_wav_upload: "https://uploadstatic.mihoyo.com/ys-obc/2022/11/02/16576950/4d9feb71760c5e8eb5f6c700df12fa0c_6824265537002152805.mp3" # 参考音频地址,api_name: = "voice_clone"时填写
-      gender:  "female" # 生成声线，api_name: = "voice_creation"时填写
-      pitch:  3 # 音高，api_name: = "voice_creation"时填写
-      speed:  3 # 语速，api_name: = "voice_creation"时填写
+      gender: "female"  # 生成声线，api_name: = "voice_creation"时填写
+      pitch: 3  # 音高，api_name: = "voice_creation"时填写
+      speed: 3  # 语速，api_name: = "voice_creation"时填写
 
     openai_tts: # OpenAI 兼容的 TTS（语音合成）接口配置
       # 如果提供了这些设置，将覆盖 openai_tts.py 文件中的默认值
       model: 'kokoro' # 服务器预期使用的模型名称（例如 'tts-1'，'kokoro'）
       voice: 'af_sky+af_bella' # 服务器预期使用的声音名称（例如 'alloy'，'af_sky+af_bella'）
       api_key: 'not-needed' # 如果服务器需要，可填写 API 密钥
-      base_url: 'http://localhost:8880/v1' # TTS 服务器的基础 URL 地址
+      base_url: 'http://host.docker.internal:8880/v1' # TTS 服务器的基础 URL 地址
       file_extension: 'mp3' # 音频文件格式（'mp3' 或 'wav'）
     # 详细文档见：https://platform.minimaxi.com/document/Announcement
     minimax_tts:
@@ -447,7 +448,7 @@ character_config:
 
   # =================== Voice Activity Detection ===================
   vad_config:
-    vad_model: null
+    vad_model:
 
     silero_vad:
       orig_sr: 16000 # 原始音频采样率
@@ -461,20 +462,20 @@ character_config:
   tts_preprocessor_config:
     # 关于进入 TTS 的文本预处理的设置
 
-    remove_special_char: True # 从音频生成中删除表情符号等特殊字符
-    ignore_brackets: True # 从音频生成中删除中括号包住的内容
-    ignore_parentheses: True # 从音频生成中删除括号包住的内容
-    ignore_asterisks: True # 从音频生成中删除星号包住的内容(单双星号)
-    ignore_angle_brackets: True # 从音频生成中删除尖括号包住的内容
+    remove_special_char: true # 从音频生成中删除表情符号等特殊字符
+    ignore_brackets: true # 从音频生成中删除中括号包住的内容
+    ignore_parentheses: true # 从音频生成中删除括号包住的内容
+    ignore_asterisks: true # 从音频生成中删除星号包住的内容(单双星号)
+    ignore_angle_brackets: true # 从音频生成中删除尖括号包住的内容
 
     translator_config:
       # 比如...你说话并阅读英语字幕，而 TTS 说日语之类的
-      translate_audio: False # 警告：请确保翻译引擎配置成功再开启此选项，否则会翻译失败
+      translate_audio: false # 警告：请确保翻译引擎配置成功再开启此选项，否则会翻译失败
       translate_provider: 'deeplx' # 翻译提供商, 目前支持 deeplx 或 tencent
 
       deeplx:
         deeplx_target_lang: 'JA'
-        deeplx_api_endpoint: 'http://localhost:1188/v2/translate'
+        deeplx_api_endpoint: 'http://host.docker.internal:1188/v2/translate'
 
 
       #  腾讯文本翻译  每月500万字符  记得关闭后付费,需要手动前往 机器翻译控制台 > 系统设置 关闭
